rust/core/src/lang/snapshots/lucid_suggest_core__lang__tests__unicode_compose_nfd.snap
---
source: src/lang/mod.rs
expression: output
---
Some(
    [
        'f',
        'o',
        'ó',
        'b',
        'a',
        'r',
    ],
)
