rust/core/src/lang/snapshots/lucid_suggest_core__lang__tests__unicode_reduce_fill0.snap
---
source: src/lang/mod.rs
expression: output
---
Some(
    (
        [
            'f',
            'õ',
            '\u{0}',
            'b',
            'a',
            'r',
        ],
        [
            'f',
            'o',
            'o',
            'b',
            'a',
            'r',
        ],
    ),
)
