rust/core/src/lang/snapshots/lucid_suggest_core__lang__tests__utf_reduce_fill0.snap
---
source: src/lang/mod.rs
expression: output
---
Some(
    (
        [
            's',
            't',
            'r',
            'a',
            'ß',
            '\u{0}',
            'e',
        ],
        [
            's',
            't',
            'r',
            'a',
            's',
            's',
            'e',
        ],
    ),
)
